Wrote some short cells that will grab pages from the BitBucket's API and parse the resulting JSON. We can get info on repositories and the users who created those repositories.

--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -59,7 +59,7 @@
      "collapsed": false,
      "input": [
       "import requests, json, sys, time, re, BeautifulSoup\n",
-      "key = 'test'\n",
+      "key = 'python'\n",
       "URL = 'https://bitbucket.org/repo/all?name=' + key\n",
       "r = requests .get(URL)\n",
       "t = r.text\n",
@@ -103,10 +103,41 @@
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": []
+       "text": [
+        "/mshibly/python-examples-from-intro-to-python-course\n",
+        "/mshibly/python-examples-from-intro-to-python-course\n",
+        "/mshibly/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/4nth0nyx/python-examples-from-intro-to-python-course\n",
+        "/4nth0nyx/python-examples-from-intro-to-python-course\n",
+        "/4nth0nyx/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/youbendroid/python-examples-from-intro-to-python-course\n",
+        "/youbendroid/python-examples-from-intro-to-python-course\n",
+        "/youbendroid/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/spchunter/python-examples-from-intro-to-python-course\n",
+        "/spchunter/python-examples-from-intro-to-python-course\n",
+        "/spchunter/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/Jing0/python-examples-from-intro-to-python-course\n",
+        "/Jing0/python-examples-from-intro-to-python-course\n",
+        "/Jing0/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/Mike_5335/python-examples-from-intro-to-python-course\n",
+        "/Mike_5335/python-examples-from-intro-to-python-course\n",
+        "/Mike_5335/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/liqixi_169/python-examples-from-intro-to-python-course\n",
+        "/liqixi_169/python-examples-from-intro-to-python-course\n",
+        "/liqixi_169/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/manzoor24/python-examples-from-intro-to-python-course\n",
+        "/manzoor24/python-examples-from-intro-to-python-course\n",
+        "/manzoor24/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/wangang/python-examples-from-intro-to-python-course\n",
+        "/wangang/python-examples-from-intro-to-python-course\n",
+        "/wangang/python-examples-from-intro-to-python-course/overview#followers\n",
+        "/pvanheus/python-examples-from-intro-to-python-course\n",
+        "/pvanheus/python-examples-from-intro-to-python-course\n",
+        "/pvanheus/python-examples-from-intro-to-python-course/overview#followers\n"
+       ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -161,9 +192,9 @@
       "npages = 1\n",
       "for link in soup.findAll('a'):\n",
       "    s = link.get('href')\n",
-      "    m = re.search(r'url?q=https://bitbucket.org/([^&%]*)', s)\n",
+      "    m = re.search(r'https://bitbucket.org/([^&%]*)', s)\n",
       "    if m:\n",
-      "        print m.group[1]    \n",
+      "        print m.group(1)    \n",
       "#now need to go over the remaining pages from google search\n",
       "# https://www.google.com/search?q=site%3Abitbucket.org&start=900\n",
       "# until "
@@ -174,10 +205,37 @@
       {
        "output_type": "stream",
        "stream": "stdout",
-       "text": []
+       "text": [
+        "\n",
+        "\n",
+        "\n",
+        "malb\n",
+        "malb\n",
+        "malb\n",
+        "cmorris\n",
+        "cmorris\n",
+        "cmorris\n",
+        "durin42\n",
+        "durin42\n",
+        "durin42\n",
+        "ralphbean\n",
+        "ralphbean\n",
+        "klorenz\n",
+        "klorenz\n",
+        "nvdaaddonteam\n",
+        "nvdaaddonteam\n",
+        "nvdaaddonteam\n",
+        "rileytestut\n",
+        "rileytestut\n",
+        "eaganj\n",
+        "eaganj\n",
+        "techtonik\n",
+        "techtonik\n",
+        "techtonik\n"
+       ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -202,6 +260,98 @@
      "source": [
       "# Merge all the lists obtained so far"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Outline"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Find users via Google search, get total number of users\n",
+      "# Look into user's profile and get number of repositories\n",
+      "#     - Need to see if we get blocked\n",
+      "#     - Look into each repository and get the language and the total size"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# fdsfdsf"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import requests, json, sys, time, re, BeautifulSoup\n",
+      "\n",
+      "l = []\n",
+      "for i in range(10):\n",
+      "    URL = 'https://www.google.com/search?q=site%3Abitbucket.org&start='\n",
+      "    r = requests .get(URL + str(i*10))\n",
+      "    t = r.text\n",
+      "    soup = BeautifulSoup.BeautifulSoup(t)\n",
+      "    start = 0\n",
+      "    npages = 1\n",
+      "    for link in soup.findAll('a'):\n",
+      "        s = link.get('href')\n",
+      "        m = re.search(r'https://bitbucket.org/([^&%]*)', s)\n",
+      "        if m:\n",
+      "            l.append(m.group(1))\n",
+      "l = list(set(l))\n",
+      "print l\n",
+      "#now need to go over the remaining pages from google search\n",
+      "# https://www.google.com/search?q=site%3Abitbucket.org&start=900\n",
+      "# until "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[u'', u'MatthewTurk', u'alexiosg', u'HelmuthPloner', u'btubbs', u'blechta', u'chapmanb/', u'sjl/', u'dstufft', u'seanfarley', u'klembot', u'shimizukawa', u'ged', u'rileytestut', u'bosilca', u'atlassianlabs', u'klorenz', u'ralphbean', u'cmorris', u'pmoore', u'slime73', u'godane', u'kimmov', u'runhello', u'piotrkarbowski', u'code_aster', u'anghyflawn', u'johanvts', u'amdatu', u'ms2ger', u'fbennett', u'jmichel', u'ned', u'prologic', u'tunnuz', u'yuja', u'ncoghlan', u'xerial', u'belak', u'haard', u'arigo', u'duangle', u'psagers', u'0intro', u'nantic', u'kmike', u'agronholm', u'logilab', u'vero4ka', u'mhowison', u'slav0nic', u'wwmm', u'DanC', u'tianyikillua', u'features', u'ianb', u'andrew_shadura', u'petermr', u'durin42', u'jmchilton', u'david/', u'samskillman', u'jaraco', u'bartbes', u'silentium', u'jamesmorrison', u'mchaput', u'kiwidrew', u'pitrou', u'yminsky', u'gphemsley', u'iElectric', u'kokua', u'wyatt', u'techtonik', u'malb', u'dereckson', u'seandroid', u'codekoala', u'fanstatic', u'tabo', u'sborho', u'leledumbo', u'mosaic/', u'kveroneau', u'scons', u'serialk', u'dismine', u'zurmo/', u'cmutel', u'NickyP', u'lalinsky', u'nvdaaddonteam', u'Alexander_Hanel/', u'jendrikseipp', u'caseywdunn', u'fundacionctic', u'izi', u'neonichu']\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print len(l)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "107\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
