Edited the JSON retrieval and storage. Repo names are not unique, but were being stored as if they were. Now they are stored per username, which is guaranteed to be unique, so there are no overwrites/collisions'

--- a/ahota_p1.ipynb
+++ b/ahota_p1.ipynb
@@ -22,7 +22,6 @@
       "json_response = requests.get(URL_PREFIX + parameter + per_page).json()\n",
       "next_page = json_response['next']\n",
       "\n",
-      "repos = {}\n",
       "users = {}\n",
       "private = 0\n",
       "\n",
@@ -31,51 +30,58 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 97
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\n",
+      "# I had to edit extract_data()\n",
+      "# Previously, I had two dictionaries: one for users and one for repos\n",
+      "# But I realized repos are NOT guaranteed to be uniquely named, which is\n",
+      "# why we were getting fewer than we should've when searching.\n",
+      "# The 'full_name' in json_response IS guaranteed to be unique since it includes\n",
+      "# user's name, which is also guaranteed to be unique.\n",
+      "# So now there is only one main dict, users, which contains all info.\n",
+      "# users[username] is a nested dictionary and is just the names of that user's repos\n",
+      "# as the key, and the rest of the json_response dict as the value.\n",
+      "# Yes, triple-nested dictionaries.\n",
       "\n",
       "def extract_data(repo):\n",
+      "    global users\n",
       "    username, slash, reponame = repo['full_name'].partition('/')\n",
-      "    update = datetime.datetime.strptime(repo['updated_on'], '%Y-%m-%dT%X.%f+00:00') # I think everything is in UTC\n",
-      "    size = repo['size'] # bytes\n",
-      "    language = repo['language'] # Seems to be empty most of the time\n",
-      "    if repo['is_private']:\n",
-      "        private += 1\n",
-      "    repos[reponame] = { 'user':username, 'last_update':update, 'size':size, 'language':language }\n",
       "    try:\n",
-      "        users[username].append(reponame)\n",
+      "        users[username][reponame] = repo\n",
       "    except KeyError:\n",
-      "        users[username] = [ reponame ]\n",
+      "        users[username] = {}\n",
+      "        users[username][reponame] = repo\n",
       "\n",
       "\n",
-      "def get_next_page(page):\n",
-      "    items = page['values']\n",
+      "def get_next_page():\n",
+      "    global json_response\n",
+      "    items = json_response['values']\n",
       "    for item in items:\n",
       "        extract_data(item)\n",
-      "    return requests.get(page['next']).json()\n",
+      "    json_response = requests.get(json_response['next']).json()\n",
       "\n",
       "\n",
-      "def query(num, page):\n",
+      "def query(num):\n",
+      "    global json_response\n",
       "    if num == 0:\n",
       "        # Go until there is nothing left!\n",
-      "        while page.has_key('next'):\n",
+      "        while json_response.has_key('next'):\n",
       "            if cur_page % 100 == 0:\n",
       "                print 'On page', cur_page\n",
-      "            page = get_next_page(page)\n",
+      "            get_next_page()\n",
       "            cur_page += 1\n",
       "    else:\n",
       "        for i in range(num):\n",
-      "            page = get_next_page(page)"
+      "            get_next_page()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 100
     },
     {
      "cell_type": "code",
@@ -83,25 +89,24 @@
      "input": [
       "# This is what the following lines do:\n",
       "#  - Try to load a pickled file from the disk\n",
-      "#    - These pickled files are supposed to be caches of previously found usernames and repos. This is just to save time\n",
-      "#  - If those files are there, it just loads them\n",
-      "#  - If those files are NOT there, then it uses BitBucket's API to query DEF_QUERY number of pages\n",
-      "#    - After it does this, it will save a pickled version of the dictionaries it generates to be used as cache above\n",
+      "#    - This is just a cache of the users previously found to save time. Delete these files to search again\n",
+      "#  - If the file is there, it just loads it\n",
+      "#  - If the file is NOT there, then it uses BitBucket's API to query DEF_QUERY number of pages\n",
+      "#    - After it does this, it will save a pickled version of the dictionary it generates to be used as cache above\n",
       "\n",
       "\n",
       "try:\n",
       "    users = pickle.load( open('./users.p', 'r') )\n",
-      "    repos = pickle.load( open('./repos.p', 'r') )\n",
-      "    print '-- Using cached users and repositories --'\n",
+      "    print '-- Using cached users --'\n",
       "except IOError:\n",
       "    print '-- Grabbing', DEF_QUERY, 'pages --'\n",
-      "    query(DEF_QUERY, json_response)\n",
+      "    query(DEF_QUERY)\n",
       "    pickle.dump( users, open('./users.p', 'w') )\n",
-      "    pickle.dump( repos, open('./repos.p', 'w') )\n",
       "    print '-- Results cached --'\n",
       "\n",
       "print 'Number of users found:', len(users.keys())\n",
-      "print 'Number of repos found:', len(repos.keys())"
+      "print 'Number of repos found:', sum([len(users[user].keys()) for user in users.keys()])\n",
+      "# Number of repos should be (number of queries) * (per_page)"
      ],
      "language": "python",
      "metadata": {},
@@ -110,8 +115,134 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "-- Grabbing 100 pages --\n",
-        "-- Results cached --"
+        "-- Using cached users --\n",
+        "Number of users found: 4765\n",
+        "Number of repos found: 10000\n"
+       ]
+      }
+     ],
+     "prompt_number": 104
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import collections, csv\n",
+      "\n",
+      "# This loop gives us the languages from repos that have a specified language\n",
+      "# We can make a graph based on this, but mention that a lot of repos don't specify language\n",
+      "\n",
+      "# Can you tell I like list comprehensions?\n",
+      "languages = [users[user][repo]['language'] for user in users.keys() for repo in users[user].keys() if users[user][repo]['language']]\n",
+      "lang_count = collections.Counter(languages)\n",
+      "writer = csv.writer(open('languages.csv', 'w'))\n",
+      "for key, value in lang_count.items():\n",
+      "    writer.writerow([key, value])\n",
+      "\n",
+      "print 'Language use'\n",
+      "for lang in lang_count.keys():\n",
+      "    print '{0:12} {1:3}'.format(lang, lang_count[lang])\n",
+      "print '----------------'\n",
+      "\n",
+      "# This loop gets the number of repos per user\n",
+      "# What we're showing in this counter is the number of users who had <n> repos\n",
+      "\n",
+      "num_repos_per_user = [ len(users[user].keys()) for user in users.keys() ]\n",
+      "num_repos_count = collections.Counter(num_repos_per_user)\n",
+      "writer = csv.writer(open('num_repos.csv', 'w'))\n",
+      "for key, value in num_repos_count.items():\n",
+      "    writer.writerow([key, value])\n",
+      "\n",
+      "print 'Number of repos'\n",
+      "for repo in num_repos_count.keys():\n",
+      "    print '{0:3} {1:4}'.format(repo, num_repos_count[repo])\n",
+      "print '----------------'\n",
+      "\n",
+      "year_created = [ users[user][repo]['created_on'][:4] for user in users.keys() for repo in users[user].keys() ]\n",
+      "year_count = collections.Counter(year_created)\n",
+      "writer = csv.writer(open('year_created.csv', 'w'))\n",
+      "for key, value in year_count.items():\n",
+      "    writer.writerow([key, value])\n",
+      "\n",
+      "print 'Year created'\n",
+      "for year in year_count.keys():\n",
+      "    print '{0:4} {1:4}'.format(year, year_count[year])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Language use\n",
+        "emacs lisp     4\n",
+        "racket         1\n",
+        "objective-c    7\n",
+        "haskell        5\n",
+        "common lisp    3\n",
+        "go             1\n",
+        "xml            1\n",
+        "java          24\n",
+        "delphi         5\n",
+        "perl          16\n",
+        "c#             5\n",
+        "matlab         2\n",
+        "ada            4\n",
+        "haxe           1\n",
+        "erlang         1\n",
+        "shell          7\n",
+        "python       191\n",
+        "javascript    15\n",
+        "viml           2\n",
+        "sql            1\n",
+        "php           24\n",
+        "ruby          13\n",
+        "groovy         1\n",
+        "latex          4\n",
+        "c             30\n",
+        "d              1\n",
+        "ocaml          7\n",
+        "c++           21\n",
+        "html/css       1\n",
+        "tcl            1\n",
+        "clojure        2\n",
+        "zsh            1\n",
+        "----------------\n",
+        "Number of repos\n",
+        "  1 3059\n",
+        "  2  757\n",
+        "  3  343\n",
+        "  4  193\n",
+        "  5  116\n",
+        "  6   86\n",
+        "  7   47\n",
+        "  8   27\n",
+        "  9   26\n",
+        " 10   22\n",
+        " 11   16\n",
+        " 12   17\n",
+        " 13    7\n",
+        " 14   10\n",
+        " 15    7\n",
+        " 16    5\n",
+        " 17    4\n",
+        " 18    3\n",
+        " 19    2\n",
+        " 21    1\n",
+        " 22    2\n",
+        " 23    2\n",
+        " 24    1\n",
+        " 25    4\n",
+        " 26    2\n",
+        " 30    1\n",
+        " 31    1\n",
+        " 38    1\n",
+        " 44    1\n",
+        " 45    1\n",
+        "100    1\n",
+        "----------------\n",
+        "Year created"
        ]
       },
       {
@@ -119,73 +250,12 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Number of users found: 4767\n",
-        "Number of repos found: 8642\n"
+        "2008 1098\n",
+        "2009 8902\n"
        ]
       }
      ],
-     "prompt_number": 36
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import collections\n",
-      "\n",
-      "# This loop gives us the languages from repos that have a specified language\n",
-      "# We can make a graph based on this, but mention that a lot of repos don't specify language\n",
-      "\n",
-      "languages = [repos[name]['language'] for name in repos.keys() if repos[name]['language']]\n",
-      "lang_count = collections.Counter(languages)\n",
-      "\n",
-      "print lang_count\n",
-      "\n",
-      "\n",
-      "#for name in names:\n",
-      "#    if repos[name]['language'] != '':\n",
-      "#        print repos[name]['language']"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Counter({u'python': 158, u'c': 30, u'php': 23, u'java': 22, u'c++': 20, u'perl': 16, u'ruby': 13, u'javascript': 12, u'ocaml': 7, u'objective-c': 6, u'shell': 6, u'delphi': 5, u'c#': 5, u'emacs lisp': 4, u'haskell': 4, u'ada': 4, u'latex': 4, u'common lisp': 3, u'matlab': 2, u'viml': 2, u'clojure': 2, u'go': 1, u'racket': 1, u'haxe': 1, u'sql': 1, u'groovy': 1, u'd': 1, u'html/css': 1, u'zsh': 1})\n"
-       ]
-      }
-     ],
-     "prompt_number": 48
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# This loop gets the number of repos per user\n",
-      "# What we're showing in this counter is the number of users who had <n> repos\n",
-      "# For example, when I ran this, the first few wer \"2: 3063, 4: 755\"\n",
-      "# This means there were 3063 users that had 2 repos, and 755 users who had 4 repos\n",
-      "# There is a weird pattern going on with this data, though. There are no odd numbers of repos\n",
-      "# Need to check for errors\n",
-      "\n",
-      "num_repos_per_user = [ len(users[name]) for name in users.keys() ]\n",
-      "num_repos_count = collections.Counter(num_repos_per_user)\n",
-      "\n",
-      "print num_repos_count"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Counter({2: 3063, 4: 755, 6: 343, 8: 193, 10: 116, 12: 86, 14: 47, 16: 27, 18: 26, 20: 22, 24: 17, 22: 16, 28: 10, 26: 7, 30: 7, 32: 5, 34: 4, 50: 4, 36: 3, 38: 2, 44: 2, 46: 2, 52: 2, 42: 1, 48: 1, 60: 1, 62: 1, 200: 1, 76: 1, 88: 1, 90: 1})\n"
-       ]
-      }
-     ],
-     "prompt_number": 49
+     "prompt_number": 121
     },
     {
      "cell_type": "code",
@@ -193,7 +263,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 85
     }
    ],
    "metadata": {}
